# EmployeeManagement

./: CMakeLists.txt  main.cpp
worker/: Boss.cpp  Boss.h  employee.cpp  employee.h  manager.cpp  manager.h  worker.h  workerManager.cpp  workerManager.h
